compiler/plc_rowan_parser/src/grammar/snapshots/plc_rowan_parser__grammar__var_decl_grammar__tests__var_declaration_multiple_vars.snap
---
source: compiler/plc_rowan_parser/src/grammar/var_decl_grammar.rs
expression: "format_tree(&output, &input)"
---
VAR_DECLARATION
  IDENTIFIER_LIST
    NAME
      IDENT "x"
    COMMA ","
    NAME
      IDENT "y"
    COMMA ","
    NAME
      IDENT "z"
  COLON ":"
  NAME_REF
    IDENT "INT"
  SEMICOLON ";"
