compiler/plc_rowan_parser/src/grammar/snapshots/plc_rowan_parser__grammar__var_decl_grammar__tests__var_declaration_simple.snap
---
source: compiler/plc_rowan_parser/src/grammar/var_decl_grammar.rs
expression: "format_tree(&output, &input)"
---
VAR_DECLARATION
  IDENTIFIER_LIST
    NAME
      IDENT "x"
  COLON ":"
  NAME_REF
    IDENT "INT"
  SEMICOLON ";"
